--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <h1>Ritesh’s Dog Adoption Page</h1>
+  <p>Ritesh loves dogs! Click on a dog breed to learn more about it 🐕</p>
+
+  <ul>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Golden_Retriever_medium-to-light-coat.jpg" 
+             alt="Golden Retriever" width="300">
+      </a>
+    </li>
+
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Poodle_Toy_Red.jpg" 
+             alt="Poodle" width="300">
+      </a>
+    </li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
