--- a/main.html
+++ b/main.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	  <h1>Ritesh’s Dog Adoption Page</h1>
-  <p>Ritesh loves dogs! Click on a dog breed to learn more about it 🐕</p>
 
-  <ul>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Golden_Retriever_medium-to-light-coat.jpg" 
-             alt="Golden Retriever" width="300">
-      </a>
-    </li>
+    <h1>Dog Adoption</h1>
+    <p>Ritesh wants to adopt a dog and learn more about their breeds. Below are some dog breeds with their images and Wikipedia links.</p>
 
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Poodle_Toy_Red.jpg" 
-             alt="Poodle" width="300">
-      </a>
-    </li>
-  </ul>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810540993556%29.jpg" 
+                     alt="Golden Retriever" width="300">
+            </a>
+        </li>
+
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Poodle_white_Standard.jpg" 
+                     alt="Poodle" width="300">
+            </a>
+        </li>
+    </ul>
 
 </body>
-
 </html>
