--- a/main.html
+++ b/main.html
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Adoption</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <h1>Dog Adoption</h1>
-    <p>Ritesh wants to adopt a dog and learn more about their breeds. Below are some dog breeds with their images and Wikipedia links.</p>
-
-    <ul>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810540993556%29.jpg" 
-                     alt="Golden Retriever" width="300">
-            </a>
-        </li>
-
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Poodle_white_Standard.jpg" 
-                     alt="Poodle" width="300">
-            </a>
-        </li>
-    </ul>
-
+	   <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
