--- a/main.html
+++ b/main.html
@@ -4,70 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dog Adoption</title>
-  <style>
-    body {
-      font-family: "Poppins", sans-serif;
-      text-align: center;
-      background-color: #f9f9f9;
-      padding: 40px;
-    }
-
-    h1 {
-      color: #333;
-      margin-bottom: 30px;
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    li {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 15px;
-      transition: transform 0.3s;
-    }
-
-    li:hover {
-      transform: scale(1.05);
-    }
-
-    img {
-      width: 250px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-
-    a {
-      text-decoration: none;
-      color: #2c3e50;
-      font-weight: bold;
-      display: block;
-      margin-top: 10px;
-    }
-  </style>
+ 
 </head>
 
 <body>
-  <h1>🐕 Dog Adoption — Learn About Breeds</h1>
-
+  
   <ul>
     <li>
       <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_(10581910556).jpg" alt="Golden Retriever">
-        Golden Retriever
+       <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever img">
       </a>
     </li>
 
     <li>
       <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/58/White_Poodle.jpg" alt="Poodle">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle">
         Poodle
       </a>
     </li>
